--- a/index.html
+++ b/index.html
@@ -13,40 +13,30 @@
     <header>
         <h1>Tipping Tool</h1>
     </header>
-    <section>
-        <div class="container">
-            <div class="form-group">
-                <label for="number-people">Number of people</label>
-                <input type="number" name="number-people" id="number-people" required>
-            </div>
-        </div>
-    </section>
 
     <section>
         <div class="container">
-                <!-- can do an even split, or split by cost of each meal -->
-            <div class="form-group">
-                <label for="cost-meal">Total cost of meal</label>
-                <input type="number" name="cost-meal" id="cost-meal" required>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="form-group">
-                <label for="tax">California tax %</label>
-                <input type="number" name="tax" id="tax" value="7.25" required>
-            </div>
-        </div>
-    </section>
-
-    <section>
-        <div class="container">
-            <div class="form-group">
-                <label for="tip">Tip</label>
-                <input type="number" name="tip" id="tip" required>
-            </div>
+            <form action="#">
+                <div class="form-group">
+                    <label for="number-people">Number of people:</label>
+                    <input type="number" name="number-people" id="number-people" required>
+                </div>
+                <div class="form-group">
+                    <label for="cost-meal">Total cost of meal:</label>
+                    <input type="number" name="cost-meal" id="cost-meal" required>
+                </div>
+                <div class="form-group">
+                    <label for="tax">California tax %:</label>
+                    <input type="number" name="tax" id="tax" value="7.25" required>
+                </div>
+                <div class="form-group">
+                    <label for="tip">Tip:</label>
+                    <input type="number" name="tip" id="tip" required>
+                </div>
+                <div class="button">
+                    <button id="btn" type="submit">Create Account</button>
+                </div>
+            </form>
         </div>
     </section>
 
