added numpad for iphone inputs

--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             <form action="#">
                 <div class="form-group">
                     <label for="number-people">Number of people:</label>
-                    <input type="number" name="number-people" id="number-people" required>
+                    <input type="number" name="number-people" id="number-people" pattern="\d*" required>
                 </div>
                 <div class="form-group">
                     <label for="cost-meal">Total cost of meal:</label>
-                    <input type="number" name="cost-meal" id="cost-meal" required>
+                    <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" required>
                 </div>
                 <div class="form-group">
                     <label for="tax">California tax %:</label>
-                    <input type="number" name="tax" id="tax" value="7.25" required>
+                    <input type="number" name="tax" id="tax" value="7.25" pattern="\d*" required>
                 </div>
                 <div class="form-group">
                     <label for="tip">Tip:</label>
-                    <input type="number" name="tip" id="tip" required>
+                    <input type="number" name="tip" id="tip" pattern="\d*" required>
                 </div>
                 <div class="button">
                     <button id="btn" type="submit">Create Account</button>
