fixing input sizing for mobile

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
         <div class="container">
             <form action="#">
                 <div class="form-group">
-                    <label for="number-people">Number of people:</label>
+                    <label for="number-people">Number of people</label>
                     <input type="number" name="number-people" id="number-people" pattern="\d*" required>
                 </div>
                 <div class="form-group">
-                    <label for="cost-meal">Total cost of meal:</label>
+                    <label for="cost-meal">Total cost of meal</label>
                     <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" required>
                 </div>
                 <div class="form-group">
-                    <label for="tax">California tax %:</label>
+                    <label for="tax">California tax %</label>
                     <input type="number" name="tax" id="tax" value="7.25" pattern="\d*" required>
                 </div>
                 <div class="form-group">
-                    <label for="tip">Tip:</label>
+                    <label for="tip">Tip</label>
                     <input type="number" name="tip" id="tip" pattern="\d*" required>
                 </div>
                 <div class="button">
