almost done with num of ppl logic

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <form">
                 <div class="form-group">
                     <label for="number-people">Number of people</label>
-                    <input type="number" name="number-people" id="number-people" pattern="\d*" required>
+                    <input type="number" name="number-people" id="number-people" value="6" pattern="\d*" required>
                 </div>
                 <div class="cost-meal-container">
                     <div class="form-group each-meal">
                         <label for="cost-meal">Cost of each meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
                     </div>
-                    <div class="form-group each-meal">
+                    <!-- <div class="form-group each-meal">
                         <label for="cost-meal">Cost of each meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
                     </div>
@@ -37,7 +37,7 @@
                     <div class="form-group each-meal">
                         <label for="cost-meal">Cost of each meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="form-group">
                     <label for="tax">California tax %</label>
