added numbering to the meals

--- a/index.html
+++ b/index.html
@@ -21,27 +21,22 @@
                     <label for="number-people">Number of people</label>
                     <input type="number" name="number-people" id="number-people" value="2" pattern="\d*" required>
                 </div>
+                <div class="button">
+                    <button id="enter-btn" type="button">Enter</button>
+                </div>
                 <div class="cost-meal-container">
                     <div class="form-group each-meal">
-                        <label for="cost-meal">Cost of each meal</label>
-                        <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
-                    </div>
-                    <!-- <div class="form-group each-meal">
-                        <label for="cost-meal">Cost of each meal</label>
+                        <label for="cost-meal">Cost of meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
                     </div>
                     <div class="form-group each-meal">
-                        <label for="cost-meal">Cost of each meal</label>
+                        <label for="cost-meal">Cost of meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
                     </div>
-                    <div class="form-group each-meal">
-                        <label for="cost-meal">Cost of each meal</label>
-                        <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
-                    </div> -->
                 </div>
                 <div class="form-group">
-                    <label for="tax">California tax %</label>
-                    <input type="number" name="tax" id="tax" value="7.25" pattern="\d*" required>
+                    <label for="tax">Los Angeles sales tax %</label>
+                    <input type="number" name="tax" id="tax" value="9.5" pattern="\d*" required>
                 </div>
                 <div class="form-group">
                     <label for="tip">Tip</label>
