can display corresponding inital cost values to final values in the inputs

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     <button id="enter-btn" type="button">Enter</button>
                 </div>
                 <div class="cost-meal-container">
-                    <div class="form-group each-meal">
+                    <!-- <div class="form-group each-meal">
                         <label for="cost-meal">Cost of meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
                     </div>
                     <div class="form-group each-meal">
                         <label for="cost-meal">Cost of meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="form-group">
                     <label for="tax">Los Angeles sales tax %</label>
@@ -44,6 +44,8 @@
                 </div>
                 <div class="button">
                     <button id="btn" type="button">Calculate</button>
+                </div>
+                <div class="final-cost-meal-container">
                 </div>
             </form>
         </div>
