--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form">
                 <div class="form-group">
                     <label for="number-people">Number of people</label>
-                    <input type="number" name="number-people" id="number-people" value="2" pattern="\d*" required>
+                    <input type="number" name="number-people" id="number-people" value="2" pattern="\d*" min = "2" required>
                 </div>
                 <div class="button">
                     <button id="enter-btn" type="button">Enter</button>
@@ -36,11 +36,11 @@
                 </div>
                 <div class="form-group">
                     <label for="tax">Los Angeles sales tax %</label>
-                    <input type="number" name="tax" id="tax" value="9.5" pattern="\d*" required>
+                    <input type="number" name="tax" id="tax" value="9.5" pattern="\d*" min = "0" required>
                 </div>
                 <div class="form-group">
                     <label for="tip">Tip</label>
-                    <input type="number" name="tip" id="tip" pattern="\d*" placeholder="$" required>
+                    <input type="number" name="tip" id="tip" pattern="\d*" placeholder="$" min = "0" required>
                 </div>
                 <div class="button">
                     <button id="btn" type="button">Calculate</button>
