--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h1>Bill Splitting Tool</h1>
+        <h1>Bill Splitting Tool V2</h1>
     </header>
 
     <section>
