added decimal feature

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <form">
                 <div class="form-group">
                     <label for="number-people">Number of people</label>
-                    <input type="number" name="number-people" id="number-people" value="2" pattern="\d*" min = "2" required>
+                    <input type="number" inputmode="decimal" name="number-people" id="number-people" value="2" pattern="\d*" min = "2" required>
                 </div>
                 <div class="button">
                     <button id="enter-btn" type="button">Enter</button>
