added decimal feature for new inputs

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </div>
                 <div class="form-group">
                     <label for="tax">Los Angeles sales tax %</label>
-                    <input type="number" name="tax" id="tax" value="9.5" pattern="\d*" min = "0" required>
+                    <input type="number" inputmode="decimal" name="tax" id="tax" value="9.5" pattern="\d*" min = "0" required>
                 </div>
                 <div class="form-group">
                     <label for="tip">Tip</label>
-                    <input type="number" name="tip" id="tip" pattern="\d*" placeholder="$" min = "0" required>
+                    <input type="number" inputmode="decimal" name="tip" id="tip" pattern="\d*" placeholder="$" min = "0" required>
                 </div>
                 <div class="button">
                     <button id="btn" type="button">Calculate</button>
