--- a/index.html
+++ b/index.html
@@ -24,15 +24,16 @@
                 <div class="button">
                     <button id="enter-btn" type="button">Enter</button>
                 </div>
+                <div class="meal-cost-title">Meal Costs</div> 
                 <div class="cost-meal-container">
-                    <!-- <div class="form-group each-meal">
+                    <div class="form-group each-meal">
                         <label for="cost-meal">Cost of meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
                     </div>
                     <div class="form-group each-meal">
                         <label for="cost-meal">Cost of meal</label>
                         <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="tax-tip-container">
                     <div class="form-group">
