added cards with shadows for each meal

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <body>
     <header id="header">
-        <img src="eating.svg" alt="Eating image" class="image"><img>
-        <h1>Easy Split - Angela</h1>
+        <img src="eating.svg" alt="Eating image" class="image">
+        <h1>Easy Split</h1>
     </header>
 
     <section>
@@ -28,12 +28,22 @@
                 <div class="meal-cost-title">Meal Costs</div> 
                 <div class="cost-meal-container">
                     <div class="form-group each-meal">
-                        <label for="cost-meal">Person 1</label>
-                        <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
+                        <div>
+                            <p>Person 1</p>
+                        </div>
+                        <div class="each-meal-div">
+                            <div class="each-meal-color">$0.00</div>
+                            <img src="chevron.svg" alt="down-arrow" class="chevron">
+                        </div>
                     </div>
                     <div class="form-group each-meal">
-                        <label for="cost-meal">Person 2</label>
-                        <input type="number" name="cost-meal" id="cost-meal" pattern="\d*" placeholder="$" required>
+                        <div>
+                            <p>Person 2</p>
+                        </div>
+                        <div class="each-meal-div">
+                            <div class="each-meal-color">$0.00</div>
+                            <img src="chevron.svg" alt="down-arrow" class="chevron">
+                        </div>
                     </div>
                 </div>
                 <div class="tax-tip-container">
